fix(css -popover): set hidden overflow to back from translated div

--- a/client/app/common/less/popover.less
+++ b/client/app/common/less/popover.less
@@ -223,6 +223,10 @@
                     transform: translateX(-(@page-width));
                 }
 
+                &:not(.move) {
+                    overflow: hidden;
+                }
+
                 .popover-page {
                     width: @page-width;
                 }
